--- a/css/breakpoints.css
+++ b/css/breakpoints.css
@@ -88,7 +88,7 @@
   }
 }
 
-@media screen and (max-width: 577px){
+@media screen and (max-width: 575px){
 
   #sidebar {
     width: 150px;
@@ -108,7 +108,7 @@
   }
 
   .row-works {
-    grid-template-columns: repeat(1, minmax(12em, 20em));
+    grid-template-columns: repeat(1, 1fr);
     justify-content: center;
   }
 }
