--- a/css/style.css
+++ b/css/style.css
@@ -100,7 +100,7 @@ body {
 }
 
 .home img {
-  max-width: 150px;
+  max-width: 200px;
   background-color: var(--color-detail);
 }
 
@@ -108,7 +108,7 @@ body {
   text-decoration: none;
   color: var(--color-light);
   font-size: 1.5em;
-  padding: 0 0.5em;
+  padding: 0.5em;
 }
 
 .btn-scroll-down {
@@ -116,6 +116,7 @@ body {
   padding: 2px;
   border: 1px solid var(--color-light);
   border-radius: var(--radius);
+  background-color: inherit;
 }
 
 .btn-scroll-down:before {
@@ -154,23 +155,6 @@ body {
   font-family: "Porfolio";
   font-size: 50px;
   color: var(--color-detail3);
-}
-
-.active {
-  animation-name: titelUp;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-}
-
-@keyframes titelUp {
-  from{
-    top: 80px;
-    opacity: 0;
-  }
-  to{
-    top: 0px;
-    opacity: 1;
-  }
 }
 
 .card {
@@ -282,7 +266,7 @@ ul.timeline > li:before {
 }
 
 .company-name, .company-date {
-  color: grey;
+  color: var(--color-detail2);
   text-transform: uppercase;
 }
 
